# bearprint

./: .gitignore  README.md  _config.yml  go.mod  go.sum  lefthook.yml
.github/workflows/: build-api.yml  build-cli.yml  smoke-test-api.yml
bearprint-api/: README.md  bearprint.service  html.go  main.go  main_test.go  markdown.go  network.go
bearprint-api/localprinter/: printer.go  printer_test.go  qr.go  qr_test.go  wrap.go  wrap_test.go
bearprint-cli/: README.md  go.mod  main.go
bearprint-cli/api/: print.go
bearprint-cli/config/: config.go  config_test.go
bearprint-cli/printer/: print.go
bearprint-cli/printservice/: client.go  client_test.go
bearprint-server/: Makefile  bearprint.service  pyproject.toml  requirements.txt
bearprint-server/src/bearprint_server/: app.py
bearprint-server/src/bearprint_server/static/: index.css
bearprint-server/src/bearprint_server/templates/: index.html
docs/: _config.yml  getting-started.md  index.md
print-server/: Makefile  bearprint.service  gunicorn.conf.py  pyproject.toml  requirements.txt
print-server/scripts/: install.sh
print-server/src/print_server/: app.py  printer.py
print-server/src/print_server/static/: index.css  index.html  index.md
print-server/src/print_server/templates/: index.html
print-server/tests/: test_routes.py
scripts/: api.smoke.test.sh  install-api.sh  install-cli.sh
shared/printer/: job.go  validation.go  validation_test.go
