[project]
name = "print-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Ian King",email = "ian.antking@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "markdown (>=3.8.2,<4.0.0)",
    "markupsafe (>=3.0.2,<4.0.0)"
]

[tool.poetry]
packages = [{include = "print_server", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
